kubernetes/apps/networking/traefik/addons/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "devicon:traefikproxy"
    hajimari.io/appName: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-traefik-middleware-chain-authelia@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: &host "traefik.${SECRET_DOMAIN_INTERNAL}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
